Kapitel 1.1 (Grundlagen der Aussagenlogik) korrekturgelesen.
git-svn-id: https://svn.lug-jena.de/uni-skripte@417 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -417,8 +417,10 @@ Beispiele für Aussagen:
 \end{itemize}
 
 \textit{Vorsicht:} Umgangssprachlich versteht man unter "`oder"' oft ein
-"`entweder \ldots oder"' (genau eine der beiden Aussagen ist wahr), in der
-Logik ist es aber auch möglich, dass beide Teilaussagen wahr sind.
+"`entweder \ldots oder"' (genau eine der beiden Aussagen ist wahr).
+Logisch betrachtet ist die Disjunktion zweier Aussagen wahr,
+wenn mindestens eine der beiden Aussagen wahr ist.
+Eine Disjunktion ist also auch wahr, wenn beide Aussagen wahr sind.
 
 \emph{Implikation} zweier Aussagen:
 \begin{itemize}
@@ -435,7 +437,7 @@ Logik ist es aber auch möglich, dass beide Teilaussagen wahr sind.
 
 Für die formale Beschreibung von Aussagen verwendet man \emph{Variablen}
 bzw. Aussagezeichen wie $A_{0}, A_{1}, A_{2}, \ldots, B_{0}, B_{1},
-B_{2},\ldots$ und anstatt Verknüpfungen setzt man Symbole: $\neg$
+B_{2},\ldots$ und für Verknüpfungen setzt man Symbole: $\neg$
 (Negation), $\wedge$ (Konjunktion), $\vee$ (Disjunktion), $\rightarrow$
 (Implikation), $\leftrightarrow$ (Äquivalenz)
 
@@ -445,45 +447,48 @@ B_{2},\ldots$ und anstatt Verknüpfungen setzt man Symbole: $\neg$
    \item Jede Variable $A_{0}, A_{1}, A_{2}, \ldots,B_{0}, B_{1}, B_{2},
     \ldots$ ist eine aussagenlogische Formel.
    \item Wenn $\alpha$ und $\beta$ aussagenlogische Formeln sind, dann
-    sind auch
+    sind auch die fünf daraus entstehenden Verknüpfungen 
     \begin{gather*}
-      (\neg \alpha), (\alpha\wedge\beta), (\alpha\vee\beta),
-         (\alpha\rightarrow\beta), (\alpha\leftrightarrow\beta)
+      (\neg \alpha), ~~ (\alpha\wedge\beta), ~~(\alpha\vee\beta),
+         ~~ (\alpha\rightarrow\beta), ~~ (\alpha\leftrightarrow\beta)
     \end{gather*}
     aussagenlogische Formeln.
   \end{enumerate}
 \end{defini}
 
 \begin{bsp}[Beispiele für aussagenlogische Formeln]
-  Wenn $A_{12}$ und $B_{1}$ aussagenlogische Formeln sind, dann sind dies
-  auch aussagenlogische Formeln:
-  \begin{gather*}
-    (A_{12} \wedge B_{1}), \big((\neg A_{5}) \rightarrow B_{1}\big),
-       \big((A_{12}\wedge B_{1}) \vee \big(\neg ((\neg A_{5})\rightarrow B_{1})\big)\big)
-  \end{gather*}
+  $A_{12}$ ist eine aussagenlogische Formel.
+  $B_{1}$ ist eine aussagenlogische Formel.
+  $(A_{12} \wedge B_{1})$ ist eine al. Formel.
+  $\big((\neg A_{5}) \rightarrow B_{1}\big)$ ist eine al. Formel,
+  und
+  $\big((A_{12}\wedge B_{1}) \vee \big(\neg ((\neg A_{12})\rightarrow B_{1})\big)\big)$
+  ist eine al. Formel.
 \end{bsp}
 
 \begin{bemerk}
-  überflüssige Klammern können weggelassen werden. $A,B,C,\ldots$ können
-  auch als Variablen genommen werden.
-
-  Bindungsstärke der Verknüpfungszeichen:
+  Wir geben den Verknüpfungszeichen unterschiedliceh Bindungsstärke,
+  um Klammern beim Aufschriebne von Formeln weglassen zu können.
+  Die größte Bindungsstärke hat $\neg$, und die kleinste hat $\leftrightarrow$.
+  Die Ordnung ist durch folgende Reihenfolge gegeben.
   \begin{enumerate}
    \item $\neg$
    \item $\wedge$, $\vee$
    \item $\rightarrow$
    \item $\leftrightarrow$
   \end{enumerate}
+  Die Formel $\neg A \rightarrow B \vee C$
+  bedeutet also $((\neg A) \rightarrow (B \vee C))$.
 
-  \begin{gather*}
-    (A_{12}\wedge B_{1}) \vee \neg (\neg A_{5}\rightarrow B_{1})
-  \end{gather*}
+  Jetzt können \glqq überflüssige\grqq\xspace Klammern weggelassen werden. 
+  Zur Vereinfachung der Schreibweise können auch $A,B,C,\ldots$
+  als Variablen genommen werden.
 \end{bemerk}
 
-Jede Variable einer aussagenlogischen Formel kann einen der
-\emph[indexrand=Wahrheitswert]{Wahrheitswerte} $w$ ("`\emph{wahr}"', $T$, 1) oder $f$
+Jede Variable einer aussagenlogischen Formel kann einen der beiden
+\emph[indexrand=Wahrheitswert]{Wahrheitswerte} $w$ ("`\emph{wahr}"', $T$, 1) und $f$
 ("`\emph{falsch}"', $F$, 0) annehmen. Der Wahrheitswert einer
-zusammengesetzen Formel ergibt sich aus den Wahrheitswerten ihrer Teile.
+zusammengesetzten Formel ergibt sich aus den Wahrheitswerten ihrer Teile.
 
 \begin{table}[h]
   \centering
@@ -492,7 +497,7 @@ zusammengesetzen Formel ergibt sich aus den Wahrheitswerten ihrer Teile.
        $\alpha\rightarrow\beta$ & $\alpha\leftrightarrow\beta$ &
        $\neg\alpha$\\
     \hline
-    $f$ & $f$ & $f$ & $w$ & $w$ & $w$ & $w$\\
+    $f$ & $f$ & $f$ & $f$ & $w$ & $w$ & $w$\\
     $f$ & $w$ & $f$ & $w$ & $w$ & $f$ &\\
     $w$ & $f$ & $f$ & $w$ & $f$ & $f$ & $f$\\
     $w$ & $w$ & $w$ & $w$ & $w$ & $w$ &
@@ -529,9 +534,9 @@ $A\rightarrow B$ wahr.
     \big(\neg(A\rightarrow(B\vee C))\big)$}
 \end{figure}
 
-Die Zuordnung von Wahrheitswerten zu Variablen nennt man eine
-\emph{Belegung}. Die Belegung ist eine Funktion von Variablen auf
-Wahrheitswerte. Wir beschreiben eine Belegung durch eine Menge
+Die Zuordnung von Wahrheitswerten zu Variablen nennt man \emph{Belegung}. 
+Die Belegung ist eine Abbildung von Variablen auf Wahrheitswerte. 
+Wir beschreiben eine Belegung durch eine Menge
 \begin{gather*}
   \mathcal{A} \subseteq \{ A_{0}, A_{1}, A_{2}, \ldots,B_{0}, B_{1},
      B_{2}, \ldots \} \cup \{ \neg A_{0}, \neg A_{1}, \neg A_{2}, \ldots,
@@ -539,6 +544,15 @@ Wahrheitswerte. Wir beschreiben eine Belegung durch eine Menge
 \end{gather*}
 mit $\{A_{i}, \neg A_{i}\}\not\subseteq \mathcal{A}$ und $\{B_{i}, \neg
 B_{i}\}\not\subseteq \mathcal{A}$ für alle $i$.
+Dabei gilt für jede Belegung $\cA$ und jede Variable $X$:
+\begin{gather*}
+    \mathcal{A}(X) = \begin{cases}
+                            w &\text{falls}\ X\in\mathcal{A}\\
+                            f &\text{falls}\ \neg X\in\mathcal{A}\\
+                          \end{cases}
+\end{gather*}
+
+
 
 Als ein \emph{Literal} bezeichnet man eine Variable oder deren Negation:
 $A_{i},B_{i}, \neg A_{i}$ und $\neg B_{i}$.
@@ -550,23 +564,25 @@ jede Variable $X$, die in der Formel $\alpha$ vorkommt, gilt:
 \end{gather*}
 
 
-Wenn $\mathcal{A}$ eine Belegung ist, die zu der aussagenlogischen
-Formel $\alpha$ passt, dann ist $\mathcal{A}(\alpha)$ wie folgt
+Sei $\mathcal{A}$ eine Belegung ist, die zu der aussagenlogischen
+Formel $\alpha$ passt.
+Wir betrachten $\cA$ auch als Funktion von Formeln auf Wahrheitswerte.
+Für Formel $\alpha$ ist $\cA(\alpha)$ der Wahrheitswert
+von $\alpha$ unter der Belegung $\cA$.
+Aus der Semantik der Verknüpfungszeichen
+ergibt sich folgende induktive Definition von $\mathcal{A}(\alpha)$.
 induktiv definiert:
 \begin{faelle}
  \item $\alpha$ ist eine Variable $X$:
   \begin{gather*}
-    \mathcal{A}(\alpha) = \begin{cases}
-                            w &\text{falls}\ X\in\mathcal{A}\\
-                            f &\text{falls}\ \neg X\in\mathcal{A}\\
-                          \end{cases}
+    \mathcal{A}(\alpha) = \cA(X)
   \end{gather*}
 
  \item $\alpha$ ist eine \emph{Konjunktion} $(\beta\wedge\gamma)$:
   \begin{gather*}
     \mathcal{A}(\alpha) =
        \begin{cases}
-         w & \mathcal{A}(\beta)=w\ \text{und}\ \mathcal{A}(\gamma)=w\\
+         w & \text{falls } \mathcal{A}(\beta)=w\ \text{und}\ \mathcal{A}(\gamma)=w\\
          f & \text{sonst}
        \end{cases}
   \end{gather*}
@@ -575,7 +591,7 @@ induktiv definiert:
   \begin{gather*}
     \mathcal{A}(\alpha) =
        \begin{cases}
-         w & \mathcal{A}(\beta)=w\ \text{oder}\ \mathcal{A}(\gamma)=w\\
+         w & \text{falls } \mathcal{A}(\beta)=w\ \text{oder}\ \mathcal{A}(\gamma)=w\\
          f & \text{sonst}
        \end{cases}
   \end{gather*}
@@ -584,7 +600,7 @@ induktiv definiert:
   \begin{gather*}
     \mathcal{A}(\alpha) =
        \begin{cases}
-         f & \mathcal{A}(\beta)=w\ \text{und}\ \mathcal{A}(\gamma)=f\\
+         f & \text{falls } \mathcal{A}(\beta)=w\ \text{und}\ \mathcal{A}(\gamma)=f\\
          w & \text{sonst}
        \end{cases}
   \end{gather*}
@@ -593,15 +609,35 @@ induktiv definiert:
   \begin{gather*}
     \mathcal{A}(\alpha) =
        \begin{cases}
-         w & \mathcal{A}(\beta)=\mathcal{A}(\gamma)\\
+         w & \text{falls } \mathcal{A}(\beta)=\mathcal{A}(\gamma)\\
          f & \text{sonst}
        \end{cases}
   \end{gather*}
 \end{faelle}
 
+\begin{bsp}
+Wir betrachten den Wahrheistwert von
+$\alpha=A\rightarrow\neg(\neg B\vee A)$ unter der Belegung $\cA=\{A,\neg B\}$.
+Es gilt
+
+\begin{tabular}{ccp{0.8\textwidth}}
+$\cA(A\rightarrow\neg(\neg B\vee A))=f$ & \gdw & 
+  $\cA(A)=w$ und $\cA(\neg(\neg B\vee A))=f$ \\
+& \gdw & $\cA(A)=w$ und $\cA(\neg B\vee A)=t$ \\
+& \gdw & $\cA(A)=w$ und 
+     $\raisebox{-1mm}{$\llcorner$}\cA(\neg B)=t$ oder 
+     $\cA(A)=t\raisebox{-1mm}{$\lrcorner$}$\\
+& \gdw & $\cA(A)=w$ und $\raisebox{-1mm}{$\llcorner$}\cA(B)=f$ 
+          oder $\cA(A)=t\raisebox{-1mm}{$\lrcorner$}$
+\end{tabular}
+
+Da $\cA(A)=w$ und $\cA(B)=f$, die letzte Aussage wahr.
+Also gilt $\cA(A\rightarrow\neg(\neg B\vee A))=f$.
+\end{bsp}
+
 \begin{defini}[Tautologie und Kontradiktion]
   Eine Formel, die unter jeder passenden Belegung den Wahrheitswert $w$
-  hat, nennt man \emph{Tautologie}. Eine Formel, für die unter allen
+  hat, nennt man \emph{Tautologie}. Eine Formel, die unter allen passenden
   Belegungen der Wahrheitswert $f$ ist, nennt man \emph{Kontradiktion}.
 \end{defini}
 
@@ -640,26 +676,46 @@ Grundlegende Äquivalenzen:
   (\emph{Assoziativität})\\
   $A\vee (B\vee C) \equiv (A\vee B)\vee C$
  \item $A\wedge (B\vee C) \equiv (A\wedge B) \vee (A\wedge C)$
-  \hfill (\emph{Distribitivität})\\
+  \hfill (\emph{Distributivität})\\
   $A\vee (B\wedge C) \equiv (A\vee B) \wedge (A\vee C)$
  \item $A \equiv \neg(\neg A)$ \hfill (\emph{Doppelnegation})
  \item $\neg(A\wedge B) \equiv \neg A \vee \neg B$
   \hfill (\emph{de Morgan'sche Regeln})\\
   $\neg(A\vee B) \equiv \neg A \wedge \neg B$
  \item $A \wedge A \equiv A$\\
-  $A\vee A \equiv A$ \hfill (\emph{Absorbtion})
+  $A\vee A \equiv A$ \hfill (\emph{Absorption})
  \item $A \wedge \phi \equiv A$ für alle Tautologien $\phi$\\
   $A \vee \psi \equiv A$ für alle Kontradiktionen $\psi$.
  \item $A\rightarrow B \equiv \neg A\vee B$
  \item $A\leftrightarrow B \equiv (A\wedge B) \vee (\neg A\wedge\neg B)$
 \end{itemize}
 
-Für jede Aussagenvariable kann eine beliebige Formel eingesetzt werden.
-Die daraus entstehenden Formeln bleiben äquivalent. Ein Beispiel:
+Diese Äquivalenzen bleiben erhalten,
+wenn man für die Aussagenvariablen beliebige Formel einsetzt.
+(Alle Vorkommen der gleichen Variablen werden durch die gleiche Formel ersetzt.)
+Folgende Äquivalenz entsteht aus $A\wedge B\equiv B\wedge A$,
+indem $A$ durch $A\rightarrow B$ und $B$ durch $C \vee \neg B$ ersetzt wird.
 \begin{gather*}
   (A\rightarrow B) \wedge (C \vee \neg B) \equiv (C\vee \neg B) \wedge
      (A\rightarrow B)
 \end{gather*}
+
+\begin{bsp}
+$A\rightarrow B \not\equiv B\rightarrow A$, denn für die Belegung
+$\mathcal{A} = \{A,\neg B\}$ ist $\mathcal{A}(A\rightarrow B) = f$ und
+$\mathcal{A}(B\rightarrow A) = w$.
+
+$A\rightarrow B \equiv \neg B \rightarrow \neg A$, denn
+\begin{align*}
+  A\rightarrow B &\equiv \neg A \vee B \equiv B \vee \neg A\\
+  &\equiv \neg\neg B \vee\neg A\\
+  &\equiv \neg B \rightarrow \neg A
+\end{align*}
+\end{bsp}
+
+
+Die Äquivalenz von Formeln lässt sich auch mit dem Verknüpfungszeichen $\leftrightarrow$
+ausdrücken.
 
 \begin{center}
   \begin{tabular}{ccc}
@@ -672,16 +728,6 @@ Die daraus entstehenden Formeln bleiben äquivalent. Ein Beispiel:
   \end{tabular}
 \end{center}
 
-$A\rightarrow B \not\equiv B\rightarrow A$, denn für die Belegung
-$\mathcal{A} = \{A,\neg B\}$ ist $\mathcal{A}(A\rightarrow B) = f$ und
-$\mathcal{A}(B\rightarrow A) = w$.
-
-$A\rightarrow B \equiv \neg B \rightarrow \neg A$, denn
-\begin{align*}
-  A\rightarrow B &\equiv \neg A \vee B \equiv B \vee \neg A\\
-  &\equiv \neg\neg B \vee\neg A\\
-  &\equiv \neg B \rightarrow \neg A
-\end{align*}
 
 
 \begin{lemma}\label{lemma-mp-semantik}
@@ -705,17 +751,19 @@ $A\rightarrow B \equiv \neg B \rightarrow \neg A$, denn
 \end{proof}
 
 
-\subsection{Sind alle Operationen \texorpdfstring{$\neg, \wedge, \vee, \rightarrow,
-\leftrightarrow$}{} nötig?}
+\subsection{Adäquate Verknüpfungszeichen}
 
-Eine \emph{Boole'sche Funktion} $g$ ist eine Funktion $g\colon\{w,f\}^{k}
-\rightarrow\{w,f\}$. Jede Boole'sche Funktion lässt sich durch eine
-\emph{Wahrheitstafel} beschreiben.
-
+Jede Formel mit $k$ Variablen beschreibt
+lässt sich durch eine Wahrheitstafel mit $k+1$ Spalten beschreiben:
+die ersten $k$ Spalten enthalten die möglichen Wahrheitswerte
+der Variablen, und die letzte Spalte enthält den Wahrheiswert 
+der Formel unter der durch die ersten $k$ Spalten festgelegten Belegung
+(siehe \autoref{tab:wahrheitstafel}).
 \begin{table}
   \centering
   \begin{tabular}{ccc|cl}
-    $A_{1}$ & $A_{2}$ & $A_{3}$ & $g(A_{1},A_{2}, A_{3})$ & \\
+    $A_{1}$ & $A_{2}$ & $A_{3}$ & $\cA\big(\neg \big(A_{1}\vee(A_{3}\leftrightarrow
+    A_{2})\big) \vee (A_{1}\wedge\neg A_{3})\big)$ \\ % $g(A_{1},A_{2}, A_{3})$ & \\
     \hline
     $f$ & $f$ & $f$ & $f$ &\\
     $f$ & $f$ & $w$ & $w$ & $\star$\\
@@ -731,35 +779,57 @@ Eine \emph{Boole'sche Funktion} $g$ ist eine Funktion $g\colon\{w,f\}^{k}
   % A_{2})\big) \vee (A_{1}\wedge\neg A_{3})$}
   \label{tab:wahrheitstafel}
 \end{table}
+Aus der Wahrheitstafel kann man direkt eine Formel ablesen,
+die zu der Formel, für die die Wahrheitstafel konstruiert wurde,
+äquivalent ist (die also die gleiche Wahrheitstafel hat).
+Man wählt man alle Zeilen mit Wahrheitswert $w$ in der letzten Spalte
+(Zeilen mit $\star$ in \autoref{tab:wahrheitstafel}).
+Für jede dieser Zeilen bildet man eine Konjunktion von Literalen,
+die genau durch die in der Zeile angegebene Belegung wahr wird.
 
-Eine Formel ist in \emph[index=disjunktive Normalform]{disjunktiver
-Normalform} (\emph[index=]{DNF})\index{DNF|see{disjunktive Normalform}} wenn sie eine
-Disjunktion von Konjunktionen von Literalen ist:
-\begin{gather*}
-  \bigvee \bigwedge \alpha
-\end{gather*}
+{
+  \centering
 
-Für jede beliebige aussagenlogische Formel gibt es eine äquivalente
-Formel in disjunktiver Normalform. (ohne Beweis)
+  \begin{tabular}{ccc|cl|c}
+    $A_{1}$ & $A_{2}$ & $A_{3}$ & $\cA(\alpha)$ & & Konjunktion von Literalen \\
+    \hline
+    $f$ & $f$ & $w$ & $w$ & $\star$ & $\neg A_1 \wedge \neg A_2 \wedge      A_3$ \\
+    $f$ & $w$ & $f$ & $w$ & $\star$ & $\neg A_1 \wedge      A_2 \wedge \neg A_3$ \\
+    $w$ & $f$ & $f$ & $w$ & $\star$ & $     A_1 \wedge \neg A_2 \wedge \neg A_3$ \\
+    $w$ & $w$ & $f$ & $w$ & $\star$ & $     A_1 \wedge      A_2 \wedge \neg A_3$ \\
+  \end{tabular}
 
-Die disjunktive Normalform der Funktion~$g$ lässt sich leicht
-aufstellen, indem man die Literale aller Zeilen, für die die Funktion
-wahr ist (Zeilen mit $\star$ in \autoref{tab:wahrheitstafel}), konjunktiv
-verknüpft und diese Terme wiederum disjunktiv verknüpft:
+}  
+
+Diese Konjunktionen verknüpft man mittels Disjunktion.
 \begin{gather*}
   \phi = (\neg A_{1} \wedge \neg A_{2} \wedge A_{3}) \vee (\neg A_{1}\wedge
      A_{2} \wedge \neg A_{3}) \vee (A_{1} \wedge \neg A_{2}\wedge \neg
-     A_{3}) \vee (A_{1}\wedge A_{2} \wedge \neg A_{3})\\
-  \begin{aligned}
-    \mathcal{A} &= \{A_{1}, \neg A_{2}, \neg A_{3}\},
-       &\mathcal{A}(\phi) &= w = g(w,f,f)\\
-    \mathcal{A}' &= \{\neg A_{1}, \neg A_{2}, \neg A_{3}\},
-       &\mathcal{A}'(\phi) &= f = g(f,f,f)
-  \end{aligned}
+     A_{3}) \vee (A_{1}\wedge A_{2} \wedge \neg A_{3})
 \end{gather*}
+Die erhaltene Formel $\varphi$ ist 
+in \emph[index=disjunktive Normalform]{disjunktiver Normalform} 
+(\emph[index=]{DNF})\index{DNF|see{disjunktive Normalform}},
+da sie eine Disjunktion von Konjunktionen von Literalen ist.
 
-Jede Boole'sche Funktion lässt sich auf diese Weise durch eine aussagenlogische Formel
-mit den Verknüpfungszeichen $\neg, \wedge$ und $\vee$ darstellen.
+\begin{lemma}
+Für jede beliebige aussagenlogische Formel gibt es eine äquivalente
+Formel in disjunktiver Normalform.
+\end{lemma}
+
+Formeln in DNF enthalten keine Verknüpfungszeichen
+$\rightarrow$ und $\leftrightarrow$.
+Man braucht also nicht alle Verknüpfungszeichen
+zum Beschreiben von Verknüpfungen von Aussagen.
+
+\begin{korol}
+Für jede aussagenlogische Formel gibt es eine äquivalente Formel
+mit den Verknüpfungszeichen $\neg$, $\vee$ und $\wedge$.
+\end{korol}
+
+Man kann auch noch auf das $\vee$ (oder auch das $\wedge$ (aber nicht auf beide))
+verzichten.
+
 
 \begin{satz}
   Für jede aussagenlogische Formel gibt es eine äquivalente Formel, die
@@ -771,15 +841,15 @@ mit den Verknüpfungszeichen $\neg, \wedge$ und $\vee$ darstellen.
     eine Induktion über den Formelaufbau.
 
     \begin{mdescription}
-     \item[IA:] $\alpha$ ist eine Variable $A$ und damit trivialer Weise
-      in DNF.
+     \item[IA:] $\alpha$ ist eine Variable $A$.
+                Dann enthält $\alpha$ garkeine Verknüpfungszeichen.
 
      \item[IV:] Für beliebige Formeln $\beta$ und $\gamma$ gibt es
       äquivalente Formeln $\beta' \equiv \beta$ und
       $\gamma'\equiv\gamma$, die nur $\neg$ und $\wedge$ enthalten.
 
-     \item[IS:] Es ist zu zeigen, dass zu jeder Formel deren Teilformeln
-      nur $\neg$ und $\wedge$ enthalten eine äquivalente Formel mit nur
+     \item[IS:] Es ist zu zeigen, dass zu jeder Formel, deren Teilformeln
+      nur $\neg$ und $\wedge$ enthalten, eine äquivalente Formel mit nur
       den Verknüpfungen $\neg$ und $\wedge$ existiert.
       \begin{faelle}
        \item Sei $\alpha=\neg\beta$. Dann gilt: $\alpha\equiv\neg\beta'$ und
@@ -819,13 +889,36 @@ mit den Verknüpfungszeichen $\neg, \wedge$ und $\vee$ darstellen.
   \end{align*}
 \end{bsp}
 
-\begin{bemerk}
-  Analog: Für jede aussagenlogische Formel gibt es eine äquivalente
-  Formel, die nur $\neg$ und $\vee$ bzw. $\neg$ und $\rightarrow$ als
-  Verknüpfungszeichen benutzt.
-\end{bemerk}
+\begin{defini}
+Eine Menge $V$ von Verknüpfungszeichen heißt \emph{adäquat},
+falls es für jede aussagenlogische Formel eine äquivalente
+Formel gibt, die nur Verknüpfungszeichen aus $V$ enthält.
+\end{defini}
+
+Man ist natürlich daran interessiert,
+möglichst kleine adäquate Mengen von Verknüpfungszeichen zu finden.
+
+\begin{lemma}
+Die folgenden Mengen von Verknüpfungszeichen sind adäquat.
+\begin{enumerate}
+\item $\{\neg,\wedge\}$
+\item $\{\neg,\vee\}$
+\item $\{\neg,\rightarrow\}$
+\end{enumerate}
+\end{lemma}
 
 \begin{bemerk}
+  $\neg$ und $\leftrightarrow$ reichen auch nicht aus! Eine Formel, die
+  nur diese beiden Verknüpfungszeichen verwendet, hat entweder die
+  Struktur $A \leftrightarrow B$  oder $\neg A$ mit $A$
+  und $B$ als beliebig komplexe Formeln, die wiederum nur die
+  Verknüpfungen $\neg$ und $\leftrightarrow$ verwenden. Da
+  die Wahrheitswerttabelle für die Äquivalenz \autoref{tab:1} immer eine
+  gerade Anzahl an Einträgen $w$ und eine gerade Anzahl an Einträgen $f$ hat
+  (unabhängig davon, ob das Ergebnis nochmal negiert wird),
+  kann man keine Formel aufstellen, die eine ungerade Anzahl an Einträgen $w$ hat
+  (wie z.\,B.\,eine zu $A\wedge B$ äquivalente Formel).
+
   Formeln, die nur Konjunktion und Disjunktion als Verknüpfungszeichen enthalten,
   nennt man \emph{monotone Formeln}.
   Man stelle sich die Wahrheitswerte $w$ als $1$ und $f$ als $0$ vor.
@@ -846,19 +939,6 @@ mit den Verknüpfungszeichen $\neg, \wedge$ und $\vee$ darstellen.
   Dann ist $\mathcal{B}$ eine Vergrößerung von $\mathcal{A}$.
   Aber es gilt $\mathcal{A}(\alpha)=w$ und
   $\mathcal{B}(\alpha)=f$, also $\mathcal{A}(\alpha) > \mathcal{B}$.
-\end{bemerk}
-
-\begin{bemerk}
-  $\neg$ und $\leftrightarrow$ reichen auch nicht aus! Eine Formel, die
-  nur diese beiden Verknüpfungszeichen verwendet, hat entweder die
-  Struktur $\neg A \leftrightarrow B$ oder $A \leftrightarrow B$ mit $A$
-  und $B$ als beliebig komplexe Formeln, die wiederum nur die
-  Verknüpfungen $\neg$ und $\leftrightarrow$ verwenden. Da
-  die Wahrheitswerttabelle für die Äquivalenz \autoref{tab:1} immer eine
-  gerade Anzahl an Einträgen $w$ und eine gerade Anzahl an Einträgen $f$ hat
-  (unabhängig davon, ob das Ergebnis nochmal negiert wird),
-  kann man keine Formel aufstellen, die eine ungerade Anzahl an Einträgen $w$ hat
-  (wie z.\,B.\,eine zu $A\wedge B$ äquivalente Formel).
 \end{bemerk}
 
 
@@ -899,18 +979,54 @@ mit den Verknüpfungszeichen $\neg, \wedge$ und $\vee$ darstellen.
   \label{tab:1}
 \end{table}
 
-Mit dem einzelnen Verknüpfungszeichen \emph{NOR} $\downarrow$ lässt sich jede
-aussagenlogische Formel äquivalent darstellen.
+Es gibt zwei (bisher noch nicht betrachtete)
+Verknüpfungszeichen, die jeweils einzeln
+eine adäquate Menge von Verknüpfungszeichen darstellen.
+Das ist das NAND ($\uparrow$) und das NOR ($\downarrow$).
+Die Namen spiegeln ihre Definition wieder.
+Es gilt $A\uparrow B \equiv \neg(A\wedge B)$
+und $A\downarrow B \equiv \neg(A\vee B)$.
 
-So ist z.\,B. $\neg A\equiv A\downarrow A$ und
+\begin{lemma}
+$\{\uparrow\}$ und $\{\downarrow\}$ sind adäquate Mengen
+von Verknüpfungszeichen.
+\end{lemma}
+
+\begin{proof}
+Es reicht aus, zu zeigen, dass das jeweilige Verknüpfungszeichen
+alle Verknüpfungszeichen einer anderen adäquaten Menge \glqq simulieren\grqq\xspace
+kann.
+Es gilt $\neg A \equiv A \downarrow A \equiv A \uparrow A$,
+und 
 \begin{align*}
   A\wedge B &\equiv \neg\neg(A\wedge B)\\
   &\equiv \neg(\neg A\vee \neg B)\\
   &\equiv \neg( (A\downarrow A) \vee (B\downarrow B))\\
   &\equiv (A\downarrow A) \downarrow (B\downarrow B)
 \end{align*}
+Da $\{\neg,\wedge\}$ adäquat ist,
+ist $\{\downarrow\}$ ebenfalls adäquat.
 
-Das gleiche gilt für \emph{NAND} $\uparrow$.
+Mit 
+\begin{align*}
+ A\downarrow B & \equiv \neg(A\vee B) \\
+             & \equiv \neg\neg(\neg A\wedge\neg B) \\
+             & \equiv \neg\neg((A\uparrow A) \wedge (B\uparrow B)) \\
+             & \equiv \neg ((A\uparrow A) \uparrow (B\uparrow B)) \\
+             & \equiv ((A\uparrow A) \uparrow (B\uparrow B)) \uparrow 
+                     ((A\uparrow A) \uparrow (B\uparrow B))
+\end{align*}
+folgt, dass $\{\uparrow\}$ ebenfalls adäquat ist.
+
+Wie man sieht, werden die Formeln, in denen nur NAND und NOR verwendet werden,
+schnell groß.
+\end{proof}
+
+Jede andere adäquate Menge von Verknüfungszeichen
+ist eine Obermenge der fünf genannten adäquaten Mengen.
+
+
+
 
 \section{Ein Axiomensystem für die Aussagenlogik}
 
@@ -2195,7 +2311,7 @@ zu einer Herleitung von $\Box$ aus $S$ ergänzen.
 \end{lemma}
 
 \index{Resolutionsmethode!Vollständigkeit der}
-\begin{satz}[Vollständigkeit der Resolutionsmethode]
+\begin{satz}[Vollständigkeit der Resolutionsmethode]\label{satz-vollst-resolution}
   Ist eine Klauselmenge $S$ unerfüllbar,
   dann ist $S$ widerlegbar mittels Resolution.
 
@@ -2448,7 +2564,7 @@ die Klauselmenge eingefügt.
 Man kann (leicht) zeigen,
 dass die Schlussregeln die Unerfüllbarkeit der Klauselmenge nicht ändern
 und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
-(entsprechend \autoref{lemma-vollst-resolution} und \autoref{satz-korrektheit-resolution-vor}).
+(entsprechend \autoref{satz-korrektheit-resolution-vor} und \autoref{satz-vollst-resolution}).
 
 %% Ende des Abschnittes ueber Resolution
 
