--- a/lischke-form-sprachen/skript.latex
+++ b/lischke-form-sprachen/skript.latex
@@ -245,48 +245,48 @@ Avram Noam Chomsky
       Falls keine Regel $[A,e]\in R$, so $G$ kontextfrei gem"a"s D7,
       andernfalls konstruiere $G'$ nach Algo
     \end{enumerate}
-    
+     
     Algo:
     \begin{itemize}
-     \item setze W_{0}:= {A: [A,e] \in R} und W_{i+1} := W_{i}\cup {A:
-      \exists q ([A,q]\in R \wedge q \in W_{i}^{\ast})} solange bis
-      W_{i+1}=W_{i}
-     \item Dann W := W_{i}, G'=[X, N,S,R'] mit R' := {[p,q']: q\not= e
-       \wedge \exists q([p,q]\in R\wedge(q'=q\vee q entsteht aus q durch
-      weglassen gewisser Symbole der Menge $W$))}
-      \longrightarrow G' kontextfrei gem"a"s D7 und A\in W
-      \longleftrightarrow A\in N \wedge A\xrightarrow[G]{\ast}e.
+     \item setze $W_{0}:= {A: [A,e] \in R}$ und $W_{i+1} := W_{i}\cup {A:
+      \exists q ([A,q]\in R \wedge q \in W_{i}^{\ast})}$ solange bis
+      $W_{i+1}=W_{i}$
+     \item Dann $W  := W_{i}, G'=[X, N,S,R']$ mit $R' := {[p,q']: q\neq e
+       \wedge \exists q([p,q]\in R\wedge(q'=q\vee q \text{ entsteht aus } q
+       \text{ durch Weglassen gewisser Symbole der Menge } W))}
+      \longrightarrow G'$ kontextfrei gem"a"s D7 und $A\in W
+      \longleftrightarrow A\in N \wedge A\xrightarrow[G]{\ast}e$.
     \end{itemize}
 
-    Behauptung: L(G')=L(G)\\{e\}
+    Behauptung: $L(G')=L(G)\{e\}
     \subseteq: B\longrightarrow w' \longrightarrow
-    [B,w']\in R' \longrightarrow ex. w=b_{1}\ldots b_{n} mit
-    b_{r}\in X\cup N, [B,w]\in R\wedgew'=b_{i_{1}}\ldots b_{i_{k}}, wobei
-    b_{i_{1}}\ldots b_{i_{k}} Teilfolge von b_{1}\ldots b_{n} und b\in W
-    f"ur b\in\{b_{1},\ldots,b_{n}\}\setminus{b_{i_{1}},\ldots,b_{i_{k}}}
-    \rightarrow B \xrightarrow[G]{\ast}w'.
+    [B,w']\in R' \longrightarrow$ ex. $w=b_{1}\ldots b_{n}$ mit
+    $b_{r}\in X\cup N, [B,w]\in R\wedge w'=b_{i_{1}}\ldots b_{i_{k}}$, wobei
+    $b_{i_{1}}\ldots b_{i_{k}}$ Teilfolge von $b_{1}\ldots b_{n} und b\in W$
+    f"ur $b\in\{b_{1},\ldots,b_{n}\}\setminus{b_{i_{1}},\ldots,b_{i_{k}}}
+    \rightarrow B \xrightarrow[G]{\ast}w'$.
     
-    p\in L(G') \longrightarrow S\rightarrow_{G'}^{*} p
+    $p\in L(G') \longrightarrow S\rightarrow_{G'}^{*} p
     \longrightarrow S \Rightarrow_{G}^{*} p
-    \longrightarrow p\in L(G). L\not\in L(G'), da nicht
-    verk"urzend \longrightarrow L(G')\subseteq L(G)\setminus\{e\}
+    \longrightarrow p\in L(G). L\not\in L(G')$, da nicht
+    verk"urzend $\longrightarrow L(G')\subseteq L(G)\setminus\{e\}$
     
-    r"uckw \subseteq: G' := [X,N,S,R\cup R'] \longrightarrow
+    r"uckw $\subseteq: G' := [X,N,S,R\cup R'] \longrightarrow
     L(G) \subseteq L(G') \longrightarrow
-    L(G)\setminux{e}\subseteq L(G')\setminus{e} \longrightarrow
-    reicht z.z. L(G'')\setminus{e}\subseteq L(G)
+    L(G)\setminus{e}\subseteq L(G')\setminus{e} \longrightarrow$
+    reicht z.z. $L(G'')\setminus{e}\subseteq L(G)$
     
-    Entsprechend ex. w\in L(G)\setminus{e}, w\not\inL(G').
+    Entsprechend ex. $w\in L(G)\setminus{e}, w\not\in L(G')$.
     
-    Es sei w_{0}
+    Es sei $w_{0}$
 
-    \Rightarrow_{G}w_{1}\Rightarrow\ldots
-    \Rightarrow_{G} w_{t} eine Ableitung von $w$ aus $S$ bzgl.
-    G'' k"urzester L"ange w_{0} \Rightarrow S, w_{t}=w
+    $\Rightarrow_{G}w_{1}\Rightarrow\ldots
+    \Rightarrow_{G} w_{t}$ eine Ableitung von $w$ aus $S$ bzgl.
+    $G''$ k"urzester L"ange $w_{0} \Rightarrow S, w_{t}=w$
     
-    Da $w\inL(G'')\setminus L(G')$ auf wenigstens einmal eine Regel aus
-    R\setminusR' angewandt worden sein, d.h. eine Regel [A,e] erwa bei
-    w_{i}\Rightarrow_{G''}w_{i+1} \longrightarrow
+    Da $w\in L(G'')\setminus L(G')$ auf wenigstens einmal eine Regel aus
+    $R\setminus R'$ angewandt worden sein, d.h. eine Regel $[A,e]$ erwa bei
+    $w_{i}\Rightarrow_{G''}w_{i+1} \longrightarrow
     A\in W, w_{i}=w_{i+1}Aw_{i+2}, w_{i+1}=w_{1}w_{2}
     \rightarrow e j<i mit w_{j}=w_{j+1}Bw_{j2},
     w_{j+1}=w_{j1}q_{j}Aq_{i}w_{j2}, q_{1}q_{2}\not= q
@@ -298,89 +298,89 @@ Avram Noam Chomsky
     \longrightarrow_{G}^{j}w_{1}Bw_{2}
     \longrightarrow_{G} w_{j1}q_{1}q_{2}w_{j2}
     \longrightarrow^{i-j(+1)}_{G''} w_{1}w_{2}
-    \longrightarrow_{G''}^{t+(i+1)} ist Ableitung von $w$ aus S
-    der L"ange t-1 Widerspruch dazu, dass t eine stets k"urzeste L"ange
-    ist. \longrightarrow L(G'')\setminus{e}\subseteqL(G')
+    \longrightarrow_{G''}^{t+(i+1)}$ ist Ableitung von $w$ aus $S$
+    der L"ange $t-1$ Widerspruch dazu, dass $t$ eine stets k"urzeste L"ange
+    ist. $\longrightarrow L(G'')\setminus{e}\subseteq L(G')$
     
-    Ist q_{1}q_{2}=e [B,A] \in R' \longrightarrow B´in W
+    Ist $q_{1}q_{2}=e [B,A] \in R' \longrightarrow B´in W
     \longrightarrow \alpha j'<j nit w_{j}=w_{j'1}Cw_{j'2}
-    w_{j'+1} = w_{j'+1} \ldots\ldots \longrightarrow Schluss
-    analog mit BX statt AB
+    w_{j'+1} = w_{j'+1} \ldots\ldots \longrightarrow$ Schluss
+    analog mit $BX$ statt $AB$
     
-    e\not\in L(G) \longrightarrow G\sim G'
+    $e\not\in L(G) \longrightarrow G\sim G'$
     
-    e\in L(G) \longrightarrow ex. kontextfreie gram. f"ur
-    L(G'')\cup{e} nach D7!
+    $e\in L(G) \longrightarrow$ ex. kontextfreie gram. f"ur
+    $L(G'')\cup{e}$ nach D7!
   \end{proof}
 \end{satz}
 
 \begin{satz}
-  REG=L_{3}\subsetL_{2}\subset L_{1}=L_{1'}\subset REC \subset RE=L_{0}
+  $REG=L_{3}\subset L_{2}\subset L_{1}=L_{1'}\subset REC \subset RE=L_{0}$
 \end{satz}
 
 \begin{defini}
-  7'' CS := L_{1}=L_{1'} hei"st Klasse der kintextsensitiven oder
+  7'' $CS := L_{1}=L_{1'}$ hei"st Klasse der kintextsensitiven oder
   kontextsprachen
   
-  CF := L_{2} hei"st Klasse der kontextfreien oder Chompsky-Spachen.
+  $CF := L_{2}$ hei"st Klasse der kontextfreien oder Chompsky-Spachen.
   
-  REG := L_{3} hei"st Klasse der regul"aren, Automaten- oder
+  $REG := L_{3}$ hei"st Klasse der regul"aren, Automaten- oder
   rechstlinearen Sprachen.
 \end{defini}
 
 \begin{satz} % Satz 3
-  REG\subset CF\subset CS\subset REC \subset RE=L_{0}
+  $REG\subset CF\subset CS\subset REC \subset RE=L_{0}$
   
   \begin{proof}
-    CF \subset noteq
+$    CF \subset noteq$
     
-    L := \{a^{n}b^{n}c^{n}: n\in\N\setminus\{0\} \}
+    $L := \{a^{n} b^{n} c^{n}: n\in N\setminus\{0\} \}
     G=[{a,b,c}, {S,A,B}, S, {[S,aSBA],[A,abA], [AB,BA], [bB, bb], [A,c]}]
-    \longrightarrow L(G)=L
+    \longrightarrow L(G)=L$
     es ist leicht ersichtlich, dass $G$ $L$ erzeugt und $G$
     kontextsensitiv ist.
   \end{proof}
 \end{satz}
 
 \begin{satz}[Pumping-Lemma; Bar-Hillit, Perles, Shamir]
-  Zu jeder kontextfreien Sprache $L$ existiert eine Zahl $n\in \N$, so
-  dass jedes Wort $w\in L$ mit l(w)> m in der Fom
-  w=w_{1}w_{2}w_{3}w_{4}w_{5} dargestellt werden kann, wobei
-  $w_{2}w_{4}\not= e$, l(w_{2}w_{3}w_{4}) <m mit
-  w_{1}w_{2}w_{3}w_{4}w_{5}\in L f"ur jedes i\in\N.
+  Zu jeder kontextfreien Sprache $L$ existiert eine Zahl $n\in N$, so
+  dass jedes Wort $w\in L$ mit $l(w)> m$ in der Fom
+  $w=w_{1}w_{2}w_{3}w_{4}w_{5}$ dargestellt werden kann, wobei
+  $w_{2}w_{4}\not= e, l(w_{2}w_{3}w_{4}) <m$ mit
+  $w_{1}w_{2}w_{3}w_{4}w_{5}\in L$ f"ur jedes $i\in N$.
 \end{satz}
 
 \begin{satz}
   Jede kontextfreie Sprache "uber einbuchstabigem Alphabet ist regul"ar.
   \begin{proof}
-    Sei L\in CE, L\subset{a}^{\ast}.
+    Sei $L\in CE, L\subset{a}^{\ast}$.
     
-    Nach Satz~4 existiert n\in\N, so dass f"ur jedes Wort a^{l}\in L mit
-    l>m folgt: l=i+j mit i\le j\le <m mit a^{i+kj}\subseteq L f"ur jedes
-    k\in \N
+    Nach Satz~4 existiert $n\in N$, so dass f"ur jedes Wort $a^{l}\in L$ mit
+    $l>m$ folgt: $l=i+j$ mit $i\le j\le <m mit a^{i+kj}\subseteq L$ f"ur jedes
+    $k\in  N$
     
-    L_{0} := {a^{i}: 1\le i\le m}\cap L
-    Falls L\setminusL_{0}\not\emptyset sei l_1 := min{l: a^{l}\in
-    L\setminusL_{0}}
+    $L_{0} := {a^{i}: 1\le i\le m}\cap L$
+    Falls $L\setminus L_{0}\not\emptyset sei l_1 := min{l: a^{l}\in
+    L\setminus L_{0}}$
     
-    Nach Satz~4 ist l_{1}=i_{1}+j_{1} mit 1\le j_{1}\le m, 0\le i_{1}\le
-    m mit { a^{i_{1}+kj_{1}}: k\in\N}\subseteq L
+    Nach Satz~4 ist $l_{1}=i_{1}+j_{1}$ mit $1\le j_{1}\le m, 0\le i_{1}\le
+    m$ mit ${ a^{i_{1}+kj_{1}}: k\in N}\subseteq L$
     
-    L_{1} := {a_{i_{1}+kj_{1}}: k\in\N}
+$    L_{1} := {a_{i_{1}+kj_{1}}: k\in N}$
     
-    Seien L_{1},L_{2},\ldots,L_{i'} konstruiert mit
-    L\setminus\cup_{i=0}^{i'}, so l_{i'+1} := min { l: a^{l}\in
+    Seien $L_{1},L_{2},\ldots,L_{i'}$ konstruiert mit
+$   L\setminus\cup_{i=0}^{i'}, so l_{i'+1} := min { l: a^{l}\in
     L\setminus\cup_{r=0}^{i'} L_{r}} \longrightarrow l_{i+j}=
-    i+j mit 1 \le j\le m, 0\le i\lem und L_{i+1} := {a^{i+kj}:
-    k\in\N}\subseteq L.
+    i+j mit 1 \leq j\leq m, 0\leq i$ und $L_{i+1} := {a^{i+kj}:
+    k\in N}\subseteq L.$
     
     Nach endl. vielen Schritten muss
     $L\setminus\cup_{r=0}^{i}L_{r}=\emptyset$ eintreten
-    -\longrightarrow L=\cup_{r=0}^{i}L_{r},
-    L_{0},\ldots,L_{i}\in REG \longrightarrow L\in REG
+$    -\longrightarrow L=\cup_{r=0}^{i}L_{r},
+    L_{0},\ldots,L_{i}\in REG \longrightarrow L\in REG$
   \end{proof}
 \end{satz}
 
-(A4) CF_{1} \subset CS_{1} \subset REC_{1}\subset RE_{1}
+$(A4) CF_{1} \subset CS_{1} \subset REC_{1}\subset RE_{1}$
 \end{document}
 % LaTeX_output_format: pdf
