--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -1,8 +1,23 @@
+% Einige zusätzliche Informationen für rubber
+%  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
+% rubber: clean $base.thm
+%  rubber soll nach Änderungen an der Datei nochmal bauen
+% rubber: watch $base.thm
+% rubber: makeidx.tool      xindy
+% rubber: makeidx.language  german-din
+
 \documentclass{scrreprt}
+
+\usepackage[l2tabu]{nag}  % nag überprüft den Text auf verältete Befehle
+                          % oder solche, die man nicht in LaTeX verwenden
+                          % soll -- l2tabu-Checker in LaTeX
 \usepackage{ngerman}
 \usepackage[latin1]{inputenc}
-\usepackage[OT1]{fontenc}
+\usepackage[T1]{fontenc}
 \usepackage{amsmath}
+\usepackage[all,warning]{onlyamsmath}  % warnt bei Verwendung von nicht
+                                       % amsmath-Umgebungen z.\,B. $$...$$
+\usepackage{fixmath}     % ISO-konforme griech. Buchstaben
 \usepackage{amsfonts}
 \usepackage[thmmarks,hyperref]{ntheorem} 
 \usepackage{paralist}
@@ -17,6 +32,14 @@
 \usepackage{nicefrac}
 \usepackage{enumerate}
 \usepackage{booktabs}
+\usepackage{svn}         % Zum Auswerten und ordentlichen Darstellen der
+                         % SVN-Schlüsselwörter (s. vor \begin{document})
+                         % dafür muss in SVN noch das Flag svn:keywords
+                         % auf "LastChangedRevision LastChangedDate"
+                         % gesetzt werden
+\usepackage{ellipsis}    % Korrektur für \dots
+\usepackage{fixltx2e}
+\usepackage{microtype} % Verbesserung der Typographie
 
 \newtheorem{bsp}{Beispiel}[chapter]
 \newtheorem{defin}[bsp]{Definition}
@@ -30,10 +53,10 @@
 \newtheorem*{proof}{Beweis:}
 
 %% Bezeichnungen diverser Zahlenmengen
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Q}{\mathbb{Q}}
-\newcommand{\Z}{\mathbb{Z}}
+\newcommand*{\R}{\mathbb{R}}
+\newcommand*{\N}{\mathbb{N}}
+\newcommand*{\Q}{\mathbb{Q}}
+\newcommand*{\Z}{\mathbb{Z}}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
@@ -42,11 +65,11 @@
 
 
 %% kalligrafische Zeichen
-\newcommand{\FF}{\mathcal{F}}
+\newcommand*{\FF}{\mathcal{F}}
 
 %% sonstige Abkürzungen
-\newcommand{\obda}{o.\,B.\,d.\,A.\,}
-\newcommand{\unb}{unter den Nebenbedingungen\xspace}
+\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
+\newcommand*{\unb}{unter den Nebenbedingungen\xspace}
 
 %% optische Unterstützer im Text
 \newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
@@ -54,26 +77,98 @@
 \DeclareMathOperator{\co}{co}  %% konvexe Huelle
 \DeclareMathOperator{\rg}{rg}  %% Rang
 
+\makeindex
+
+\SVN $LastChangedRevision$
+\SVN $LastChangedDate$
+
 \begin{document}
+
+\title{Lineare Optimierung}
+\author{Prof.~Walter Alt}
+\date{Semester: SS 2006}
+\maketitle
+
+\clearpage
+\chapter*{Vorwort}
+
+% entspricht Vorlage: 426
+
+\begin{itshape}
+  Dieses Dokument wurde als Skript für die auf der
+  Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
+  Projekts
+  "`\href{http://www.minet.uni-jena.de/~joergs/skripte/}
+  {Vorlesungsskripte der Fakultät für Mathematik}
+  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}"'
+  weiter betreut. Das
+  Dokument wurde nach bestem Wissen und Gewissen angefertigt. Denoch
+  garantiert weder der auf der Titelseite genannte Dozent, die Personen,
+  die an dem Dokument mitgewirkt haben, noch die
+  Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
+  und dessen Folgen wird von keiner der genannten Personen eine Haftung
+  übernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
+  verändern oder auf anderen Medien verfügbar zu machen, solange ein
+  Verweis auf die Internetadresse des Projekts
+  \url{http://www.minet.uni-jena.de/~joergs/skripte/}
+  enthalten ist.
+
+  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
+  vom \SVNDate. Eine (mögliche) aktuellere Ausgabe ist auf der Webseite
+  des Projekts verfügbar.
+
+  Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
+  Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
+  selbst einzupflegen -- einfach eine E-Mail an die
+  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
+  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  sind unter der oben genannten Internetadresse verfügbar.
+
+  Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
+  haben, vielmals danken:
+  \begin{itemize}
+   \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel
+    \texttt{<jens@kubieziel.de>}} (2006)
+  \end{itemize}
+\end{itshape}
+
+\clearpage
+\pdfbookmark[0]{Inhaltsverzeichnis}{inhaltsverzeichnis}
+\tableofcontents
+
+\clearpage
+\pdfbookmark[0]{Auflistung der Sätze}{theoremlist}
+\chapter*{Auflistung der Theoreme}
+
+\pdfbookmark[1]{Sätze}{satzlist}
+\section*{Sätze}
+\theoremlisttype{optname}
+\listtheorems{satz}
+
+\pdfbookmark[1]{Definitionen}{definilist}
+\section*{Definitionen}
+% \theoremlisttype{all}
+\listtheorems{defin}
+
 \chapter{Einführung}
 
 \section{Grundbegriffe und Beispiele}
 
 Die Zielstellung in der linearen Optimierung ist die Betrachtung einer
-Funktion $f:\R^n\rightarrow \R$ mit dem Ziel der Berechnung eines
+Funktion $f\colon\R^n\rightarrow \R$ mit dem Ziel der Berechnung eines
 Minimums von $f$.
 
 \begin{bsp}
   \begin{inparaenum}[(1)]
-  \item $f:\R\rightarrow\R$ mit $f(x)=x^2$ hat genau ein Minimum.
-  \item $f:\R\rightarrow\R$ mit $f(x)=x$ ist nicht nach unten
+  \item $f\colon\R\rightarrow\R$ mit $f(x)=x^2$ hat genau ein Minimum.
+  \item $f\colon\R\rightarrow\R$ mit $f(x)=x$ ist nicht nach unten
     beschränkt und hat daher kein Minimum.
-  \item $f:\R\rightarrow\R$ mit $f(x)=\sin x$.
+  \item $f\colon\R\rightarrow\R$ mit $f(x)=\sin x$.
   \end{inparaenum}
 \end{bsp}
 
 \begin{bsp}
-  Die Funktion $f:\R^2\rightarrow\R$ mit $f(x_1,x_2)= x_1 \sin (x_1+
+  Die Funktion $f\colon\R^2\rightarrow\R$ mit $f(x_1,x_2)= x_1 \sin (x_1+
   x_1 x_2\sin(x_2))$.
 \end{bsp}
 
@@ -83,17 +178,17 @@ d.\,h. für $x\in \R^n, x=
   x_1\\ \vdots\\ x_n
 \end{pmatrix}$ ist $\lVert x\rVert=\sqrt{\sum_{i=1}^n x_i^2}$. Für
 $\tilde{x}\in\R$ und $r>0$ ist die offene Kugel um $\tilde{x}$ mit
-Radius $r$ definiert durch $B(\tilde{x}, r)=\{x\in\R^n: \lVert
+Radius $r$ definiert durch $B(\tilde{x}, r)=\{x\in\R^n\colon \lVert
 x-\tilde{x} \rVert< r\}$.
 
 \paragraph{Allgemeine Formulierung des Optimierungsproblems}
 
-Sei $D\subset \R^n$ nichtleer und offen, $f:D\rightarrow \R,
+Sei $D\subset \R^n$ nichtleer und offen, $f\colon D\rightarrow \R,
 \FF\subset D$:
-\begin{equation}
+\begin{gather}
   \label{eq:P}
   \min_{x\in\FF} f(x)
-\end{equation}
+\end{gather}
 
 Die Funktion $f$ heißt \emph{Ziel-} oder \emph{Kostenfunktion}.
 \begin{description}
@@ -106,7 +201,7 @@ Die Funktion $f$ heißt \emph{Ziel-} oder \emph{Kostenfunktion}.
 
 \begin{bsp}
   $n=1, D=\R, \min f(x)=x^3$, NB: $x\geq 1$.\\
-  In diesem Fall ist $\FF=\{x\in\R: x\geq 1\}$
+  In diesem Fall ist $\FF=\{x\in\R\colon x\geq 1\}$
 \end{bsp}
 
 \begin{defin}[Lokale Minima]
@@ -123,7 +218,7 @@ Die Funktion $f$ heißt \emph{Ziel-} oder \emph{Kostenfunktion}.
 
 \begin{defin}[globales Minimum]
   Ein Punkt $\tilde{x}\in\FF$ heißt \emph{globales Minimum} von $f$
-  auf $\FF$, falls gilt $\forall x\in\FF: f(x)\geq f(\tilde{x})$
+  auf $\FF$, falls gilt $\forall x\in\FF\colon f(x)\geq f(\tilde{x})$
 \end{defin}
 
 \begin{bem*}
@@ -259,7 +354,7 @@ Allgemein sei das Problem
 \begin{equation}
   \min f(x) \text{ mit } x\in \FF
 \end{equation}
-mit der Zielfunktion $f:\R^n\rightarrow\R$ und der zulässigen Menge
+mit der Zielfunktion $f\colon\R^n\rightarrow\R$ und der zulässigen Menge
 $\FF \subset \R^n$ zu lösen.
 
 Numerische Verfahren sind Iterationsverfahren. Sie berechnen ausgehend
@@ -369,9 +464,9 @@ Optimierungsproblemen.
 
 \begin{bsp}
   Eine Supermarktkette stellt ein Billiggetränk auf Weinbasis
-  her. Grundlage ist ein Landwein mit Kosten von 1~\euro pro
-  Liter. Weitere Zutaten sind Zuckerlösung (1,20~\euro pro Liter) und
-  Konservierungsmittel (1,80~\euro pro Liter). Das Ziel ist die
+  her. Grundlage ist ein Landwein mit Kosten von 1~\euro{} pro
+  Liter. Weitere Zutaten sind Zuckerlösung (1,20~\euro{} pro Liter) und
+  Konservierungsmittel (1,80~\euro{} pro Liter). Das Ziel ist die
   Herstellung einer möglichst billigen Mischung. Dabei müssen folgende
   Restriktionen beachtet werden.
   \begin{asparaitem}
@@ -403,13 +498,13 @@ Optimierungsproblemen.
   \item Ungleichungen zwischen Vektoren sind komponentenweise zu
     verstehen
   \item Sinnvollerweise gilt: $l_x\leq u_x, l_A\leq u_A$. Gilt für
-    einen Index $i\in\{1, \ldots, n\}: l_{x_i}=u_{x_i}$, d.\,h. wir
+    einen Index $i\in\{1, \ldots, n\}\colon l_{x_i}=u_{x_i}$, d.\,h. wir
     fordern $l_{x_i}=x_i=u_{x_i}$, dann ist $x_i$ fest
-  \item Das lineare Funktional $\FF=\{x\in\R^n : l_x\leq x\leq u_x,
+  \item Das lineare Funktional $\FF=\{x\in\R^n \colon l_x\leq x\leq u_x,
     l_A\leq A^{(1)}\leq u_A, A^{(2)}x=b\}$ heißt zulässige Menge
     (feasible set).
   \item Ein Punkt $\tilde{x}\in\FF$ (zulässiger Punkt) heißt
-    \emph{optimal}, falls $\forall x\in\FF: f(x)\geq f(\tilde{x})$
+    \emph{optimal}, falls $\forall x\in\FF\colon f(x)\geq f(\tilde{x})$
     gilt, d.\,h. $\tilde{x}$ ist globales Minimum von $f$ auf $\FF$.
   \end{itemize}
 \end{bem*}
@@ -442,7 +537,7 @@ Optimierungsproblemen.
     Ax\geq b, x\geq0
   \end{align*}
   mit $c\in\R^n, A$ ist eine $m\times n$-Matrix, $b\in\R^m$. In diesem
-  Fall ist die zulässige Menge $\FF= \{x\in\R: Ax\geq b, x\geq 0\}$.
+  Fall ist die zulässige Menge $\FF= \{x\in\R\colon Ax\geq b, x\geq 0\}$.
 \end{defin}
 
 \begin{bsp}
@@ -1784,4 +1879,9 @@ ausgeführt:
   $J_{B}$ & $\hat{A}=A_{B}^{-1}A_{N}$ & $x_{B}^{*}= A_{B}^{-1}b$ &
      $A_{B}^{-1}$
 \end{tabular}
+
+\clearpage
+\pdfbookmark[0]{Index}{index}
+\printindex
+
 \end{document}
