--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -192,7 +192,7 @@
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
 \newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
 \newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
-\newcommand*{\ucorner}[2][]{#1\ulcorner#2#1\urcorner}
+\newcommand*{\ucorner}[2][]{#1\ulcorner\!#2#1\!\urcorner}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
@@ -6616,7 +6616,7 @@ Wir betrachten zuerst die zu unterscheidenden Fälle.
          dann ist $\alpha[x_i/t]=\alpha$
 \item wenn $\alpha=f^m_j(t_1,\ldots,t_m)$ ist,
 dann ist $\alpha[x_i/t] = f^m_j(t_1[x_i/t],\ldots,t_m[x_i/t])$.
-Die Ersetzungen werden also rekursiv im zusammengesetzten Term vorgenommen.
+Die Ersetzungen werden also induktiv im zusammengesetzten Term vorgenommen.
 \end{enumerate}
 Die folgende Formel drückt genau diese Fallunterscheidung aus.
 Der letzte Fall -- $\alpha$ ist ein zusammengesetzter Term --
@@ -6669,7 +6669,7 @@ $
 Von den Ersetzungen in den atomaren Formeln
 kommen wir nun zu Ersetzungen in beliebigen Formeln.
 Dazu definieren wir eine Funktion,
-die die Kodierung der durch Ersetzung entstandene Formel bestimmt.
+die die Kodierung der durch Ersetzung entstandenen Formel bestimmt.
 
 \vspace{1ex}
 
@@ -6684,7 +6684,7 @@ $Subst(y,u,v)\ = \ x$\begin{tabular}[t]{p{0.7\textwidth}l}
 Hier ist folgende Fallunterscheidung nötig.
 \begin{enumerate}
 \item wenn $\alpha$ eine atomare Formel ist,
-dann findet die Ersetzung mittels $AtmfmlSubst$ statt
+dann findet die Ersetzung mittels $\mathit{AtmfmlSubst}$ statt
 \item wenn $\alpha=(\neg \beta)$,
 dann gilt $\alpha[x_i/t] = (\neg \beta[x_i/t])$
 \item wenn $\alpha=(\beta\rightarrow\gamma)$,
@@ -6707,7 +6707,7 @@ $
 \begin{array}{rlll}
 \multicolumn{3}{l}{Subst(y,u,v) \ =} \\
 \ \ \  \min\limits_{x}
-& \multicolumn{3}{l}{AtmfmlSubst(x,y,u,v) ~\vee~} \\
+& \multicolumn{3}{l}{\mathit{AtmfmlSubst}(x,y,u,v) ~\vee~} \\
 & \begin{array}[t]{llll}
 (\exists w)_{<y}(\exists z)_{<y}~ \Big[ 
             & \big( 
@@ -6750,19 +6750,19 @@ die aus der Zahl $m$ die Kodierung des Termes $\overline{m}$ berechnet.
 
 \begin{itemize}
 \item
-$Num(m)=$ die GN von $\overline{m}$
+$\mathit{Num}(m)=$ die GN von $\overline{m}$
 
 $
 \begin{array}{rcl}
-Num(0) & = & 2^{15} (=2^{g(a_1)}) \\
-Num(m+1) & = & 2^{49} * 2^3 * Num(m) * 2^5  ( = f^1_1(\overline{m}) )
+\mathit{Num}(0) & = & 2^{15} (=2^{g(a_1)}) \\
+\mathit{Num}(m+1) & = & 2^{49} * 2^3 * \mathit{Num}(m) * 2^5  ( = f^1_1(\overline{m}) )
 \end{array}
 $
 
 \item $D(u)=$ die GN von $\alpha[x_1/\overline{u}]$, falls $u$ die GN von $\alpha$ ist
 \vspace{1ex}
 
-$D(u) ~=~ Subst(u,21,Num(u))$ \ \ .
+$D(u) ~=~ Subst(u,21,\mathit{Num}(u))$ \ \ .
 \end{itemize}
 
 Die Funktion $D$ heißt \emph{Diagonalfunktion}
@@ -6842,22 +6842,30 @@ $
 
 \section{Der Unvollständigkeitssatz von Gödel}
 
-Das folgende Prädikat $Pf$ ist offensichtlich repräsentierbar.
+Jeder Prädikatenkalkül ist vollständig in dem Sinne,
+dass jede gültige Formel auch bewiesen werden kann (\autoref{satz-vollstPK}).
+Diese Eigenschaft hat die formale Zahlentheorie nicht.
+Das heißt, es gibt Formeln,
+die in der Zahlentheorie \glqq gültig\grqq\xspace sind,
+für die es aber keinen Beweis gibt.
+Der Unvollständigkeitssatz von Gödel macht eine allgemeinere
+Aussagen, für welche Theorien es solche \glqq gültigen\grqq\xspace
+und unbeweisbaren Formeln gibt.
+Die Idee zum Beweis des Satzes 
+liegt in der Konstruktion einer Formel,
+die der Aussage \glqq Diese Aussage ist nicht beweisbar.\grqq\xspace entspricht.
+Der Selbstbezug ``Diese Aussage''
+ist in der Zahlentheorie nicht so einfach möglich und
+wird durch Gödelnummern aufgelöst.
+Es wird also eine Aussage der Art
+\glqq Die Aussage mit Gödelnummer $xyz$ ist nicht beweisbar.\grqq\xspace
+konstruiert, deren Gödelnummer gerade $xyz$ ist.
+Das geht nur indirekt über die Konstruktion
+einer zu einer solchen Aussage äquivalenten Aussage.
+Grundlage dafür ist das folgende Diagonalisierungslemma.
 
-\begin{gather*}
-  Pf = \{ (x_{1},x_{2})\colon \text{$x_{2}$ ist Gödelnummer eines Beweises
-     der Formel mit Gödelnummer $x_{1}$} \}
-\end{gather*}
-
-Die Repräsentierbarkeit der Diagonalfunktion $D$ hatten wir bereits betrachtet.
-
-\begin{gather*}
-  D(u) = \text{die Gödelnummer von $\alpha[x_{1}/\overline{u}]$, wenn
-     $\alpha$ die Gödelnummer $u$ hat}
-\end{gather*}
-
-Wenn $\alpha$ Gödelnummer $u$ hat, dann ist $\ucorner{\alpha}$ der
-Term $\overline{u}$.
+Für Formel $\alpha$ mit Gödelnummer $u$ 
+bezeichnet $\ucorner{\alpha}$ den Term $\overline{u}$.
 
 \begin{satz}[Diagonalisierungslemma]\label{satz:6}
   Sei $\alpha$ eine Formel in $\mathrm{S}$ mit $x_{1}$ als einziger
@@ -6866,39 +6874,48 @@ Term $\overline{u}$.
   \ucorner{\gamma}]$.
 
   \begin{proof}
+    Die Repräsentierbarkeit der Diagonalfunktion $D$ hatten wir bereits betrachtet.
+    %
+    \begin{gather*}
+      D(u) = \text{die Gödelnummer von $\alpha[x_{1}/\overline{u}]$, wenn
+                         $\alpha$ die Gödelnummer $u$ hat}
+    \end{gather*}
+    %
     Sei $\phi_{D}$ eine Formel in $\mathrm{S}$, die die
     Diagonalisierungsfunktion $D$ repräsentiert. Wir definieren die
-    Formeln $\alpha_{2} := (\forall x_{2}\colon \phi_{D}\rightarrow
-    \alpha[x_{1}/x_{2}])$ und $\gamma := (\forall x_{2}\colon
+    Formeln $\alpha_{2} := (\forall x_{2} ~ \phi_{D}\rightarrow
+    \alpha[x_{1}/x_{2}])$ und $\gamma := (\forall x_{2} ~
     \phi_{D}[x_{1}/\ucorner{\alpha_{2}}] \rightarrow \alpha[x_{1}/x_{2}])$.
     Es gilt $\Svdash\phi_{D} [x_{1}/\ucorner{\alpha_{2}},
     x_{2}/\ucorner{\gamma}]$, da $D(\text{Gödelnummer von
-    $\alpha_{2}$}) = \text{Gödelnummer von $\gamma$}$.
+    $\alpha_{2}$}) = \text{Gödelnummer von $\gamma$}$
+    und $D$ von $\phi_D$ repräsentiert wird.
+    Diese Eigenschaft nennen wir hier $(\star)$.
 
     Wir zeigen $\Svdash\gamma \leftrightarrow \alpha[x_{1}/
     \ucorner{\gamma}]$:
     \begin{enumerate}
      \item $\Svdash\gamma \rightarrow \alpha[x_{1}/\ucorner{\gamma}]$:
       \begin{align*}
-        (1)\quad& (\forall x_{2}\colon \phi_{D}[x_{1}/\ucorner{\alpha_{2}}]
+        (1)\quad& (\forall x_{2}~ \phi_{D}[x_{1}/\ucorner{\alpha_{2}}]
            \rightarrow \alpha[x_{1}/x_{2}]) & \text{Hypothese $\gamma$}\\
         (2)\quad& \phi_{D}[x_{1}/\ucorner{\alpha_{2}}, x_{2}/\ucorner{\gamma}]
-           \rightarrow \alpha[x_{1}/\ucorner{\gamma}] & \text{RA 4}\\
+           \rightarrow \alpha[x_{1}/\ucorner{\gamma}] & \text{(1), RA 4}\\
         (3)\quad& \phi_{D}[x_{1}/\ucorner{\alpha_{2}}, x_{2}/\ucorner{\gamma}]
-           &\text{da $\phi_{D}$ $D$ repräsentiert, Kanstr. von
-           $\alpha_{2}$ und $\gamma$}\\
-        (4)\quad& \alpha[x_{1}/\ucorner{\gamma}] &\text{MP 2,3}
+           &\text{$(\star)$} \\
+        (4)\quad& \alpha[x_{1}/\ucorner{\gamma}] &\text{MP (2), (3)}
       \end{align*}
+      Mit dem Deduktionstheorem folgt 
+        $\Svdash\gamma \rightarrow \alpha[x_{1}/\ucorner{\gamma}]$.
 
      \item $\Svdash \alpha[x_{1}/\ucorner{\gamma}] \rightarrow \gamma$:
       \begin{align*}
         (1)\quad& \alpha[x_{1}/\ucorner{\gamma}] & \text{Hypothese}\\
         (2)\quad& \phi_{D}[x_{1}/x_{2}] &\text{Hypothese}\\
-        (3)\quad& \exists_{1} x_{2}\colon \phi_{D}[x_{1}/\ucorner{\alpha_{2}}]
-           &\text{da $\phi_{D}$ $D$ repräsentiert}\\
+        (3)\quad& \exists_{1} x_{2} ~ \phi_{D}[x_{1}/\ucorner{\alpha_{2}}]
+           &\text{da $\phi_{D}$ $D$ streng repräsentiert}\\
         (4)\quad& \phi_{D}[x_{1}/\ucorner{\alpha_{2}}, x_{2}/\ucorner{\gamma}]
-           &\text{da $\phi_{D}$ $D$ repräsentiert, Kanstr. von
-           $\alpha_{2}$ und $\gamma$}\\
+           &\text{$(\star)$}\\
         (5)\quad& x_{2}= \ucorner{\gamma} &\text{Eigenschaft von $=$, (3), (4)}\\
         (6)\quad& \alpha[x_{1}/x_{2}] & \text{(1), (5), Eigenschaft von $=$}
       \end{align*}
@@ -6910,7 +6927,7 @@ Term $\overline{u}$.
       \phi_{D}[x_{1}/\ucorner{\alpha_{2}}] \rightarrow \alpha[x_{1}/x_{2}]$.
 
       mit Generalisierung: $\alpha[x_{1}/\ucorner{\gamma}] \Svdash
-      \forall x_{2}\colon \phi_{D}[x_{1}/\ucorner{\alpha_{2}}] \rightarrow
+      \forall x_{2} ~ \phi_{D}[x_{1}/\ucorner{\alpha_{2}}] \rightarrow
       \alpha[x_{1}/x_{2}]$.
 
       mit Deduktionstheorem: $\Svdash\alpha [x_{1}/\ucorner{\gamma}]\rightarrow
@@ -6919,53 +6936,72 @@ Term $\overline{u}$.
   \end{proof}
 \end{satz}
 
-\begin{gather*}
-  Pf = \{ (x_{1},x_{2})\colon \text{$x_{2}$ ist Gödelnummer eines Beweises
-     der Formel mit Gödelnummer $x_{1}$} \}\\
-\end{gather*}
-$\phi_{Pf}$ sei eine Formel in $\mathrm{S}$, die $Pf$ repräsentiert.
-$\phi_{Pf}$ hat die freien Variablen $x_{1}$ und $x_{2}$. $(\forall
-x_{2}\colon \neg\phi_{Pf})$ ist eine Formel in $\mathrm{S}$ mit $x_{1}$
-als einzige freie Variable. Mit dem Diagonalisierungslemma
-(\autoref{satz:6}) folgt:
-\begin{gather*}
-  \Svdash \gamma_{0} \leftrightarrow (\forall x_{2}\colon \neg\phi_{Pf}
-     [x_{1}/\ucorner{\gamma_{0}}]
-\end{gather*}
-$\gamma_{0}$ sagt aus: Die Formel mit der Gödelnummer von $\gamma_{0}$
-ist nicht beweisbar.
 
-\begin{satz}
-  $\gamma_{0}$ ist in $\mathrm{S}$ nicht beweisbar.
-  $\not\Svdash\gamma_{0}$
+
+Ein Beweis einer Formel $\alpha$ ist eine
+Folge von Formeln, die ein Beweis ist und mit $\alpha$ endet.
+Das primitiv rekursive Prädikat $\mathit{Prf}$ 
+erkennt Formelfolgen, die korrekte Bweise sind.
+Es ist einfach zu testen, ob eine Formelfolge mit einer bestimmten Formel endet.
+Deshalb ist folgendes Prädikat $\mathit{Pf}$ primitiv rekursiv
+und folglich repräsentierbar.
+%
+\begin{gather*}
+  \mathit{Pf} = \{ (x_{1},x_{2})\colon \text{$x_{2}$ ist Gödelnummer eines Beweises
+     der Formel mit Gödelnummer $x_{1}$} \}
+\end{gather*}
+%
+$\phi_{Pf}$ sei eine Formel in $\mathrm{S}$, die $\mathit{Pf}$ repräsentiert.
+$\phi_{Pf}$ hat die freien Variablen $x_{1}$ und $x_{2}$. $(\forall
+x_{2} ~ \neg\phi_{Pf})$ ist eine Formel in $\mathrm{S}$ mit $x_{1}$
+als einziger freien Variable. Mit dem Diagonalisierungslemma
+(\autoref{satz:6}) folgt:
+es gibt eine Formel $\gamma_0$ mit
+\begin{gather*}
+  \Svdash \gamma_{0} \leftrightarrow (\forall x_{2} ~ \neg\phi_{Pf}
+     [x_{1}/\ucorner{\gamma_{0}}])
+\end{gather*}
+$\gamma_{0}$ ist also (beweisbar) äquivalent zu der Formel
+für die Aussage \glqq Keine Zahl ist die Gödelnummer eines
+Beweises der Formel mit Gödelnummer $\gamma_{0}$.\grqq\xspace
+oder etwas kompakter \glqq $\gamma_0$ ist nicht beweisbar.\grqq.
+Wir zeigen, dass das eine wahre Aussage ist.
+
+\begin{satz}\label{satz-gamma0-nicht-beweisbar}
+  $\gamma_{0}$ ist in $\mathrm{S}$ nicht beweisbar, d.\,h. $\not\Svdash\gamma_{0}$.
 
   \begin{proof}
     $\mathrm{S}$ ist konsistent, d.\,h. es existiert keine Formel
-    $\alpha$ für die gilt $\Svdash \alpha$ und $\Svdash\neg\alpha$.
+    $\alpha$, für die $\Svdash \alpha$ und $\Svdash\neg\alpha$ gilt.
 
     Annahme: Es gelte $\Svdash\gamma_{0}$. Sei $r$ die Gödelnummer eines
     Beweises von $\gamma_{0}$ in $\mathrm{S}$. Dann folgt $\Svdash
     \phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}, x_{2}/\overline{r}]$. Nach
-    Diagonalisierungslemma (\autoref{satz:6}) gilt: $\Svdash\gamma_{0}
+    Diagonalisierungslemma (\autoref{satz:6}) gilt $\Svdash\gamma_{0}
     \leftrightarrow (\forall x_{2}\colon \neg\phi_{Pf}[x_{1}/
-    \ucorner{\gamma_{0}}]$. Nach Äquivalenzregel folgt $\Svdash (\forall
-    x_{2}\colon \neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}])$. Mit RA~4 folgt
+    \ucorner{\gamma_{0}}])$. Nach Äquivalenzregel folgt $\Svdash (\forall
+    x_{2} ~ \neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}])$. Mit RA~4 folgt
     $\Svdash\neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}, x_{2}/\overline{r}]$.
     Also ist $\mathrm{S}$ nicht konsistent.
   \end{proof}
 \end{satz}
 
+Wir führen jetzt noch einen stärkeren Begriff der Konsistenz ein,
+der sich stärker auf die Standardinterpretation der Zahlentheorie 
+mit den natürlichen Zahlen als Grundmenge bezieht.
+
 \begin{defini}
-  Sei $K$ eine Theorie mit $O$ mit $f_{1}^{1}$ (Nachfolgerfunktion). $K$
-  heißt \emph{$\omega$-konsistent}, falls für jede Formel $\alpha$ in $K$
-  gilt:
+  Sei $K$ eine Theorie mit dem Konstantensymbol $0$ 
+  und dem Funktionssymbol $f_{1}^{1}$ (Nachfolgerfunktion). 
+  $K$ heißt \emph{$\omega$-konsistent}, falls für jede Formel $\alpha$ in $K$ gilt:
   \begin{gather*}
-    (\forall n\in\N\colon \xvdash[K]{} \neg\alpha[x/\overline{u}])
-       \rightarrow \not\xvdash[K]{}(\exists x\colon \alpha)
+    \text{falls für jede natürliche Zahl $n$ gilt $\xvdash[K]{} \neg\alpha[x/\overline{n}]$, 
+           dann
+       $\not\xvdash[K]{}(\exists x ~ \alpha)$}
   \end{gather*}
 \end{defini}
 
-$\mathrm{S}$ ist $\omega$-konsistent, die die Standardinterpretation
+$\mathrm{S}$ ist $\omega$-konsistent, da die Standardinterpretation
 (mit der Grundmenge $\N$) ein Modell für $\mathrm{S}$ ist.
 
 \begin{lemma}
@@ -6976,8 +7012,8 @@ $\mathrm{S}$ ist $\omega$-konsistent, die die Standardinterpretation
     Wenn $K$ nicht konsistent ist, dann lässt sich in $K$ alles beweisen,
     da aus den logischen Axiomen folgt: wenn $\xvdash[K]{} \alpha$ und
     $\xvdash[K]{} \neg\alpha$, dann folgt für jede Formel $\beta$:
-    $\xvdash[K]{} \beta$ (wegen dem Axiom $\xvdash[K]{} \alpha \rightarrow
-    (\neg\alpha \rightarrow \beta)$.
+    $\xvdash[K]{} \beta$ (wegen der Tautologie $\xvdash[K]{} \alpha \rightarrow
+    (\neg\alpha \rightarrow \beta)$).
 
     Also reicht es aus, eine Formel $\beta$ aus $K$ zu finden, die nicht
     beweisbar ist. Sei $\beta$ eine beliebige Formel und $\alpha$ sei
@@ -6985,8 +7021,7 @@ $\mathrm{S}$ ist $\omega$-konsistent, die die Standardinterpretation
     $\neg \alpha[x/\overline{u}]$ ist Instanz einer Tautologie. Also gilt
     $\xvdash[K]{} \neg\alpha[x/\overline{u}]$ für jedes $n\in\N$.
 
-    Da $K$ $\omega$-konsistent ist, folgt $\not\xvdash[K]{} \exists
-    x\colon \alpha$.
+    Da $K$ $\omega$-konsistent ist, folgt $\not\xvdash[K]{} (\exists x ~ \alpha)$.
   \end{proof}
 \end{lemma}
 
@@ -6995,33 +7030,36 @@ $\mathrm{S}$ ist $\omega$-konsistent, die die Standardinterpretation
 \end{bemerk}
 
 \begin{satz}
-  Man kann in $\mathrm{S}$ $\neg\gamma_{0}$ nicht beweisen.
+  Man kann $\neg\gamma_{0}$ in $\mathrm{S}$ nicht beweisen,
+  d.\,h. $\not\xvdash[S]{}\neg\gamma_{0}$.
 
   \begin{proof}
-    Nehmen wir an, dass wir $\neg\gamma_{0}$ in $\mathrm{S}$ beweisen
-    können. Aus dem Diagonalisierungslemma (\autoref{satz:6}) folgt dann
-    $\Svdash\gamma_{0} \leftrightarrow (\forall x_{2}\colon
-    \neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}]$. Mit der Äquivalenzregel
-    folgt $\Svdash\neg(\forall x_{2}\colon
-    \neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}])$, d.\,h. $\Svdash (\exists
-    x_{2}\colon \phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}])$.
+    Nehmen wir an, dass wir $\neg\gamma_{0}$ in $\mathrm{S}$ beweisen können. 
+    Aufgrund der Konstruktion von $\gamma_0$ aus dem Diagonalisierungslemma 
+    (\autoref{satz:6}) gilt
+    $\Svdash\gamma_{0} \leftrightarrow 
+          (\forall x_{2} ~ \neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}])$. 
+    Mit der Äquivalenzregel folgt 
+    $\Svdash\neg(\forall x_{2} ~ \neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}])$, 
+    d.\,h. $\Svdash (\exists x_{2} ~ \phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}])$.
 
-    Wir wissen: $\Svdash \gamma_{0}$. Also ist $Pf(u, r)$ ($u$ ist die
-    Gödelnummer von $\gamma_{0}$) ist falsch für jedes $r\in\N$. Folglich
-    $\Svdash\neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}, x_{2}/\overline{r}]$
-    für jedes $r\in\N$. Dann folgt aus der $\omega$-Konsistenz von
-    $\mathrm{S}$: $\Svdash \exists x_{2}\colon
-    \phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}]$. Das ist aber ein Widerspruch zur
-    Konsistenz von $\mathrm{S}$.
+    Wir wissen: $\not\Svdash \gamma_{0}$ (\autoref{satz-gamma0-nicht-beweisbar}). 
+    Also ist $Pf(u, r)$ ($u$ ist die Gödelnummer von $\gamma_{0}$) 
+    falsch für jedes $r\in\N$. 
+    Folglich gilt $\Svdash\neg\phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}, x_{2}/\overline{r}]$
+    für jedes $r\in\N$. 
+    Dann folgt aus der $\omega$-Konsistenz von
+    $\mathrm{S}$: $\not\Svdash (\exists x_{2} ~  \phi_{Pf}[x_{1}/\ucorner{\gamma_{0}}])$. 
+    Das ist aber ein Widerspruch zur Konsistenz von $\mathrm{S}$.
   \end{proof}
 \end{satz}
 
-Eigenschaften von Theorien:
+Mögliche Eigenschaften einer Theorie $K$:
 \begin{enumerate}
  \item Die Menge alle Axiome ist repräsentierbar; $\{x\colon \text{$x$
   ist Gödelnummer eines Axioms von $K$}\}$ ist repräsentierbar in $K$.
 
- \item $\xvdash[K]{} 0\ne1$.
+ \item $\xvdash[K]{} 0\ne\overline{1}$.
 
  \item Jede primitiv-rekursive Funktion ist repräsentierbar in $K$.
 \end{enumerate}
@@ -7048,10 +7086,10 @@ Eigenschaften von Theorien:
 
   Die Konsistenz einer Theorie $K$ lässt sich nicht "`innerhalb"' von $K$
   zeigen. ($\mathrm{S}$ ist konsistent bedeutet "`$0=\overline{1}$"' ist
-  nicht beweisbar; $\forall x_{2}\colon \neg\phi_{Pf}[x_{1}/
-  "`0=\overline{1}"']$.
+  nicht beweisbar; $\forall x_{2}~ \neg\phi_{Pf}[x_{1}/
+  \text{\glqq $0=\overline{1}$\grqq}]$).
 
-  Daraus hat sich die Berechenbarkeitstheorie mit den primitiv-rekursiven
+  Daraus hat sich die Berechenbarkeitstheorie mit den (primitiv-)rekursiven
   Funktionen entwickelt.
 \end{bemerk}
 
